bugfix header hight JS text-overflow

--- a/blocks/gallery/__item/gallery__item.css
+++ b/blocks/gallery/__item/gallery__item.css
@@ -1,6 +1,8 @@
 .gallery__item {
   margin-right: 17px;
   margin-bottom: 20px;
+  row-gap: 20px;
+  column-gap: 17px;
   border-radius: 10px;
   background-color: #ffffff;
   max-width: 282px;
@@ -18,15 +20,18 @@
 @media screen and (max-width: 1249px) {
   .gallery__item {
     width: 100%;
-    /* margin: 0 auto; */
   }
   .gallery__item:nth-child(3n) {
     margin-right: 17px;
   }
-  
+  .gallery__item:nth-child(2n) {
+    margin-right: 0;
+  }
 }
 
-@media screen and (max-width: 631px) {
+
+
+@media screen and (max-width: 680px) {
   .gallery__item {
     margin: 0 auto 20px;
   }
