--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,9 +1,3 @@
 .page__header {
   margin: 0 auto 40px;
 }
-
-@media screen and (max-width: 631px) {
-  .page__header {
-    margin: 28px 0 40px;
-  }
-}
