--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,6 +8,7 @@
   right: -42px;
   top: -42px;
   transition: 0.3s;
+  border-style: none;
 }
 
 .popup__close:hover {
