--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,7 +4,7 @@
   line-height: 17px;
   color: #000000;
   border-style: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
   box-sizing: border-box;
   padding: 0 0 13px;
