--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -11,6 +11,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 336px;
 }
 
 @media screen and (max-width: 400px) {
@@ -19,5 +20,6 @@
     line-height: 17px;
     text-align: center;
     margin: 0 auto;
+    max-width: 282px;
   }  
 }
