--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -10,6 +10,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 294px;
 }
 
 @media screen and (max-width: 400px) {
@@ -17,5 +18,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    max-width: 189px;
   } 
 }
